[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nerve-ai"
version = "0.1.0"
description = "AI-powered security auditor for AI systems. AI tests AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "BreachLine", email = "dev@breachline.ai" }]
keywords = [
    "ai-security",
    "llm-security",
    "mcp-audit",
    "prompt-injection",
    "ai-red-team",
    "security-audit",
    "reactswarm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "reactswarm>=0.5",
    "typer[all]>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "anyio>=4.0",
]

[project.optional-dependencies]
anthropic = ["reactswarm[anthropic]>=0.5"]
openai = ["reactswarm[openai]>=0.5"]
google = ["reactswarm[google]>=0.5"]
mcp = ["mcp>=1.0"]
vector = [
    "qdrant-client>=1.9",
    "weaviate-client>=4.0",
]
all = [
    "reactswarm[all]>=0.5",
    "mcp>=1.0",
    "qdrant-client>=1.9",
    "weaviate-client>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "fakeredis>=2.26",
    "respx>=0.22",
]

[project.scripts]
nerve = "nerve.main:app"

[project.urls]
Homepage = "https://github.com/BreachLine/nerve"
Repository = "https://github.com/BreachLine/nerve"
Documentation = "https://github.com/BreachLine/nerve/tree/main/docs"
Issues = "https://github.com/BreachLine/nerve/issues"
Changelog = "https://github.com/BreachLine/nerve/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["nerve"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
